--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,9 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>um.docum.rest</name>
 	<description>Docum</description>
-
 	<properties>
 		<java.version>17</java.version>
 	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -58,11 +56,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>1.6.4</version>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.0.2</version>
 		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -74,5 +71,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
