--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,13 @@
 app:
+  port: ${APP_PORT:8080}
+  logging: debug
   server: 127.0.0.1:3306
   database: docum
   user: root
   password: root
-  add-properties: true
-  logging: debug
-  livereload:
-    enabled: true
-    port: 35895
-  open-in-view: true
+
+server:
+  port: ${app.port}
 
 spring:
   datasource:
@@ -18,14 +17,8 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
-    open-in-view: ${app.open-in-view}
     hibernate:
       ddl-auto: none
-  devtools:
-    livereload:
-      enabled: ${app.livereload.enabled}
-      port: ${app.livereload.port}
-    add-properties: ${app.add-properties}
 
 logging:
   level:
@@ -33,4 +26,3 @@ logging:
     org:
       hibernate:
         SQL: ${app.logging}
-
